# monai-deploy-app-sdk

./: .bumpversion.cfg  .coveragerc  .gitattributes  .gitignore  .readthedocs.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  logging.json  main.tf  monai-app-sdk.code-workspace  monai-deploy-app-sdk.code-workspace  pyproject.toml  requirements-container.txt  requirements-dev.txt  requirements-examples.txt  requirements-min.txt  requirements.txt  run  setup.cfg  setup.py  versioneer.py
.azure/: azure-build-pipeline.yml
.github/: codecov.yml
.github/ISSUE_TEMPLATE/: Enhancement  bug_report.md  documentation-request.md  enhancement_request.md  feature_request.md  submit-question.md
.github/workflows/: build_and_push_models.yml  pr.yml
THIRD_PARTY_NOTICES/: Pillow_HPND_LICENSE.txt  PyPDF2_BSD-3_LICENSE.txt  SimpleITK_Apache2.0_LICENSE.txt  highdicom_MIT_LICENSE.txt  parameterized_BSD-2_LICENSE.txt  pydicom_MIT_LICENSE.txt  pytype_Apache2.0_LICENSE.txt
agentic_tools/agent_totalsegmentator/: README.md  agent.py  agent_tools.py  anatomy_llm.py  requirements_minimal.txt  word_embeddings.py
devel/: monet_bundle_inference_operator.py
docs/: requirements.txt  srs.md
docs/_static/: custom.css
docs/source/: conf.py  index.md
docs/source/_templates/: navbar-logo.html  sidebar-quicklinks.html  title.html
docs/source/developing_with_sdk/: connecting_operators.md  core_concepts.md  creating_application_class.md  creating_operator_classes.md  deploying_and_hosting_map.md  deploying_to_the_remote_server.md  designing_workflow.md  executing_app_locally.ipynb  executing_app_locally.md  executing_docker_image_locally.md  executing_packaged_app_locally.md  index.md  packaging_app.md
docs/source/getting_started/: examples.md  index.md  installing_app_sdk.md
docs/source/introduction/: architecture.md  contributing.md  index.md  overview.md  roadmap.md
docs/source/modules/: core.md  datastores.md  domain_objects.md  executors.md  graphs.md  index.md  models.md  operators.md
docs/source/release_notes/: index.md  v0.1.0.md  v0.2.0.md  v0.2.1.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.5.1.md  v0.6.0.md  v1.0.0.md  v2.0.0.md  v3.0.0.md  v3.2.0.md  v3.3.0.md  v3.4.0.md  v3.5.0.md
examples/apps/: README.md  deploy_app_on_aarch64.md  deply_app_on_aarch64_interim.md  development_notes.md
examples/apps/ai_livertumor_seg_app/: __main__.py  app.py  livertumor_seg_operator.py
examples/apps/ai_lung_nodule_det_app/: Dockerfile  __init__.py  __main__.py  inference.py  lung_nodule.py  post_inference_ops.py  requirements.txt
examples/apps/ai_multi_ai_app/: __init__.py  __main__.py  app.py  app.yaml  readme.md  readme.txt
examples/apps/ai_pancrea_seg_app/: __main__.py  app.py
examples/apps/ai_pancreas_seg_app/: __main__.py  app.py
examples/apps/ai_remote_infer_app/: README.md  __main__.py  app.py  env_settings_example.sh  spleen_seg_operator.py
examples/apps/ai_spleen_nnunet_seg_app/: __main__.py  app.py  app.yaml  requirements.txt
examples/apps/ai_spleen_seg_app/: __init__.py  __main__.py  app.py  app.yaml  requirements.txt  spleen_seg_operator.py
examples/apps/ai_unetr_seg_app/: __main__.py  app.py  unetr_seg_operator.py
examples/apps/breast_density_classifer_app/: README.md  __main__.py  app.py  breast_density_classifier_operator.py
examples/apps/breast_density_classifier_app/: README.md  app.py  app.yaml  breast_density_classifier_operator.py  requirements.txt
examples/apps/cchmc_nnunet_fifteen_ckpt_app/: README.md  convert_nnunet_ckpts.py  development_notes.md
examples/apps/cchmc_ped_abd_ct_seg_app/: README.md  __init__.py  __main__.py  abdomen_seg_operator.py  app.py  app.yaml  dicom_sc_writer_operator.py  post_transforms.py  (+3 more)
integrations/nuance_pin/: Dockerfile  README.md  app_wrapper.py  docker-compose.yml
monai/deploy/: __init__.py  _version.py  deploy  exceptions.py
notebooks/bundles/: mednist_app-prebuilt.ipynb  segmentation_app-prebuilt.ipynb
notebooks/tutorials/: 01_simple_app.ipynb  02_mednist_app-prebuilt.ipynb  02_mednist_app.ipynb  03_segmentation_app.ipynb  03_segmentation_viz_app.ipynb  04_mis_tutorial.ipynb  04_monai_bundle_app.ipynb  04a_monai_bundle_viz_app.ipynb  05_full_tutorial.ipynb  05_multi_model_app.ipynb  06_monai_bundle_app.ipynb  07_multi_model_app.ipynb  2-MedNIST_classifier.ipynb
tests/: conftest.py
tests/fixtures/: runner_fixtures.py
tests/unit/: test_argparse_types.py  test_decoder_nvimgcodec.py  test_generic_directory_scanner.py  test_runner.py  test_runner_utils.py  test_sizeutil.py  test_vlm_operators.py  test_vlm_operators_simple.py
tools/pipeline-generator/: .gitignore  README.md  pyproject.toml  test.sh
tools/pipeline-generator/docs/: design.md
tools/pipeline-generator/docs/design_phase/: phase_1_documentation.md  phase_1_implementation.md  phase_2_documentation.md  phase_3_documentation.md  phase_6_documentation.md
tools/pipeline-generator/pipeline_generator/: __init__.py
tools/pipeline-generator/pipeline_generator/cli/: __init__.py  main.py  run.py
tools/pipeline-generator/pipeline_generator/config/: __init__.py  config.yaml  settings.py
tools/pipeline-generator/pipeline_generator/core/: __init__.py  hub_client.py  models.py
tools/pipeline-generator/pipeline_generator/generator/: __init__.py  app_generator.py  bundle_downloader.py
tools/pipeline-generator/pipeline_generator/templates/: README.md.j2  app.py.j2  app.yaml.j2  requirements.txt.j2
tools/pipeline-generator/pipeline_generator/templates/operators/: generic_directory_scanner_operator.py  image_file_loader_operator.py  image_overlay_writer_operator.py  json_results_writer_operator.py  llama3_vila_inference_operator.py  prompts_loader_operator.py  vlm_results_writer_operator.py
tools/pipeline-generator/tests/: __init__.py  test_app_generation_imports.py  test_bundle_downloader.py  test_cli.py  test_gen_command.py  test_generator.py  test_hub_client.py  test_models.py  test_run_command.py  test_security.py  test_settings.py  test_vlm_generation.py
tools/pipeline-generator/tests/operators/: test_vlm_operators_simple.py
(+274 files in other folders)
