# Copyright 2025 MONAI Consortium
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#     http://www.apache.org/licenses/LICENSE-2.0
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[tool.poetry]
name = "pipeline-generator"
version = "0.1.0"
description = "A CLI tool for generating MONAI Deploy and Holoscan pipelines from MONAI Bundles"
authors = ["MONAI"]
readme = "README.md"
packages = [{include = "pipeline_generator"}]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.2.1"
pyyaml = "^6.0.2"
huggingface-hub = "^0.34.3"
pydantic = "^2.11.7"
rich = "^14.1.0"
jinja2 = "^3.1.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
black = "^25.1.0"
flake8 = "^7.3.0"
mypy = "^1.17.1"
types-pyyaml = "^6.0.12.20250516"

[tool.poetry.scripts]
pg = "pipeline_generator.cli.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
exclude = ["tests/"]

[tool.flake8]
max-line-length = 100

