# Copyright 2025 MONAI Consortium
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#     http://www.apache.org/licenses/LICENSE-2.0
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "pipeline-generator"
version = "1.0.0"
description = "A CLI tool for generating MONAI Deploy pipelines from MONAI Bundles"
readme = "README.md"
requires-python = ">=3.10,<3.11"
authors = [{ name = "MONAI" }]
dependencies = [
  "click>=8.2.1",
  "pyyaml>=6.0.2",
  "huggingface-hub>=0.34.3",
  "pydantic>=2.11.7",
  "rich>=14.1.0",
  "jinja2>=3.1.6",
]

[project.scripts]
pg = "pipeline_generator.cli.main:cli"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
  "black>=25.1.0",
  "flake8>=7.3.0",
  "mypy>=1.17.1",
  "types-pyyaml>=6.0.12.20250516",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
exclude = ["tests/"]

[tool.flake8]
max-line-length = 100
